--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a class="nav-link" href="#services">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link">Portfolio</a>
+            <a class="nav-link" href="#portfolio">Portfolio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link">Contact</a>
@@ -68,6 +68,7 @@
     <!-- banner section end -->
   </header>
   <main>
+    <!-- About section start -->
     <section class="about py-5" id="about">
 
       <div class="container py-4">
@@ -198,6 +199,68 @@
       </div>
     </section>
     <!-- services section end -->
+
+    <!-- portfolio section start -->
+
+    <section class="portfolio py-5" id="portfolio">
+      <div class="container py-4">
+        <div class="row justify-content-center">
+          <div class="col-lg-8">
+            <div class="section-title text-center">
+              <h2 class="fw-bold text-after mb-5">Latest Works</h2>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+
+          <div class="col-md-6 col-lg-4">
+            <div class="portfolio-item">
+              <img src="img/portfolio/1.jpg" class="w-100 img-thumbnail" alt="">
+              <h3 class="text-capitalize fs-5 my-2">Team Section</h3>
+              <p class="mb-4"><a href="#" class="text-danger text-decoration-none">Live Demo</a></p>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <div class="portfolio-item">
+              <img src="img/portfolio/2.jpg" class="w-100 img-thumbnail" alt="">
+              <h3 class="text-capitalize fs-5 my-2">app landing page</h3>
+              <p class="mb-4"><a href="#" class="text-danger text-decoration-none">Live Demo</a></p>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <div class="portfolio-item">
+              <img src="img/portfolio/3.jpg" class="w-100 img-thumbnail" alt="">
+              <h3 class="text-capitalize fs-5 my-2">creative team section</h3>
+              <p class="mb-4"><a href="#" class="text-danger text-decoration-none">Live Demo</a></p>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <div class="portfolio-item">
+              <img src="img/portfolio/4.jpg" class="w-100 img-thumbnail" alt="">
+              <h3 class="text-capitalize fs-5 my-2">toggle pricing table</h3>
+              <p class="mb-4"><a href="#" class="text-danger text-decoration-none">Live Demo</a></p>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <div class="portfolio-item">
+              <img src="img/portfolio/5.jpg" class="w-100 img-thumbnail" alt="">
+              <h3 class="text-capitalize fs-5 my-2">bootstrap-5 image gallery</h3>
+              <p class="mb-4"><a href="#" class="text-danger text-decoration-none">Live Demo</a></p>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <div class="portfolio-item">
+              <img src="img/portfolio/6.jpg" class="w-100 img-thumbnail" alt="">
+              <h3 class="text-capitalize fs-5 my-2">filtarable image gallery</h3>
+              <p class="mb-4"><a href="#" class="text-danger text-decoration-none">Live Demo</a></p>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <!-- portfolio section end -->
   </main>
  
 
