--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             <a class="nav-link" href="#portfolio">Portfolio</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="#testimonials">Testimonials</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link">Contact</a>
           </li>
         </ul>
@@ -255,12 +258,27 @@
               <p class="mb-4"><a href="#" class="text-danger text-decoration-none">Live Demo</a></p>
             </div>
           </div>
-
         </div>
       </div>
     </section>
 
     <!-- portfolio section end -->
+
+    <!-- Hire me section start -->
+
+    <section class="hire-me py-5 bg-danger">
+      <div class="container py-4">
+        <div class="row justify-content-center">
+          <div class="col-lg-8 text-center">
+            <p class="text-light fs-5 hire-after">Do you have any projects ?</p>
+            <h2 class="fw-bold fs-1 text-white mb-4">I'm Available for Freelancer Projects</h2>
+            <a href="#contact" class="btn btn-outline-light">Hire me</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Hire me section end -->
   </main>
  
 
