--- a/index.html
+++ b/index.html
@@ -279,6 +279,87 @@
     </section>
 
     <!-- Hire me section end -->
+
+    <!-- Testimonials section start -->
+
+    <section class="testimonials fy-5" id="testimonials">
+      <div class="container fy-4">
+        <div class="row justify-content-center">
+          <div class="col-lg-8">
+            <div class="section-title text-center">
+              <h2 class="fw-bold text-after  mb-5 mt-5">Testimonials</h2>
+            </div>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-lg-8 col-x1-7">
+            <div id="carousel1" class="carousel slide" data-bs-ride="carousel">
+              <ol class="carousel-indicators">
+                <li type="button" data-bs-target="#carousel1" data-bs-slide-to="0" class="active bg-danger" aria-current="true" aria-label="Slide 1"></li>
+                <li type="button" data-bs-target="#carousel1" data-bs-slide-to="1" class="bg-danger" aria-label="Slide 2"></li>
+                <li type="button" data-bs-target="#carousel1" data-bs-slide-to="2" class="bg-danger" aria-label="Slide 3"></li>
+              </ol>
+            <div class="carousel-inner">
+
+            <div class="testi-item carousel-item active bg-white shadow-sm rounded p-4 mb-5">
+              <div class="testi-author-info d-flex align-items-center">
+                <img src="img/testimonial/1.jpg" class="img-thumbnail rounded-circle" alt="">
+                <div class="author ms-3">
+                  <h3 class="fs-6 mb-1">Anderson</h3>
+                  <p class="text-muted m-0">Seo Manager</p>
+                </div>
+              </div>
+              <p class="mt-3 text-muted">Rem, porro necessitatibus voluptate minus corporis modi magnam nostrum quibusdam harum incidunt ea pariatur odio delectus ex repudiandae?</p>
+              <div class="rating text-danger">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </div>
+            </div>
+            <div class="testi-item carousel-item bg-white shadow-sm rounded p-4 mb-5">
+              <div class="testi-author-info d-flex align-items-center">
+                <img src="img/testimonial/2.jpg" class="img-thumbnail rounded-circle" alt="">
+                <div class="author ms-3">
+                  <h3 class="fs-6 mb-1">Dipika</h3>
+                  <p class="text-muted m-0">Design Manager</p>
+                </div>
+              </div>
+              <p class="mt-3 text-muted">Rem, porro necessitatibus voluptate minus corporis modi magnam nostrum quibusdam harum incidunt ea pariatur odio delectus ex repudiandae?</p>
+              <div class="rating text-danger">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </div>
+            </div>
+            <div class="testi-item carousel-item bg-white shadow-sm rounded p-4 mb-5">
+              <div class="testi-author-info d-flex align-items-center">
+                <img src="img/testimonial/3.jpg" class="img-thumbnail rounded-circle" alt="">
+                <div class="author ms-3">
+                  <h3 class="fs-6 mb-1">Shersha</h3>
+                  <p class="text-muted m-0">MERN Stack Manager</p>
+                </div>
+              </div>
+              <p class="mt-3 text-muted">Rem, porro necessitatibus voluptate minus corporis modi magnam nostrum quibusdam harum incidunt ea pariatur odio delectus ex repudiandae?</p>
+              <div class="rating text-danger">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </div>
+            </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Testimonials section end -->
   </main>
  
 
