--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
             <div class="col-md-6 order-md-first">
               <div class="banner-text">
                 <p class="text-muted mb-1">Hello I'm</p>
-                <h1 class="text-danger text-uppercase fs-1 fw-bold">Web Developer</h1>
-                <h2 class="fs-4">Ahmed Laskor</h2>
-                <p class="mt-4 text-muted">Rem, porro necessitatibus voluptate minus corporis modi magnam nostrum quibusdam harum incidunt ea pariatur odio delectus ex repudiandae? Quod necessitatibus suscipit ipsam!</p>
+                <h1 class="text-danger text-uppercase fs-1 fw-bold">Ahmed Laskor</h1>
+                <h2 class="fs-2">Web Developer</h2>
+                <p class="mt-4 text-muted">A Curious, Passionate Jr. Web Developer. Love to take Dare and handle it professionally. Handle difficulties and errors efficient way.Try to keep myself updated with new technologies and learn that. </p>
                 <a href="#portfolio" class="btn btn-danger px-3 mt-3">My Work</a>
               </div>
             </div>
@@ -84,8 +84,8 @@
         <div class="row">
           <div class="col-md-6">
             <div class="about-text">
-              <h3 class="fs-4 mb-3">Rem, porro necessitatibus voluptate minus corporis modi harum incidunt</h3>
-              <p class="text-muted">Rem, porro necessitatibus voluptate minus corporis modi magnam nostrum quibusdam harum incidunt ea pariatur odio delectus ex repudiandae? Quod necessitatibus suscipit ipsam!Quod necessitatibus suscipit ipsam!Quod necessitatibus suscipit ipsam!</p>
+              <h3 class="fs-4 mb-3">A Curious, Passionate Jr. Web Developer. Love to take Dare and handle it professionally.3</h3>
+              <p class="text-muted">A Curious, Passionate Jr. Web Developer. Love to take Dare and handle it professionally. Handle difficulties and errors efficient way.Try to keep myself updated with new technologies and learn that.</p>
             </div>
             <div class="row text-center text-uppercase my-3">
               <div class="col-sm-3">
@@ -431,7 +431,7 @@
       <div class="container py-3">
         <div class="row justify-content-center align-items-center">
           <div class="col-lg-12">
-            <p class="m-0 text-muted fw-bold fs-5 text-center">&copy; 2022 Ahmed all rights reserved</p>
+            <p class="m-0 text-muted fw-bold fs-5 text-center">&copy;2022 All Rights Reserved By Ahmed Laskor</p>
           </div>   
         </div>  
       </div>
