--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="row">
           <div class="col-md-6">
             <div class="about-text">
-              <h3 class="fs-4 mb-3">A Curious, Passionate Jr. Web Developer. Love to take Dare and handle it professionally.3</h3>
+              <h3 class="fs-4 mb-3">A Curious, Passionate Jr. Web Developer. Love to take Dare and handle it professionally.</h3>
               <p class="text-muted">A Curious, Passionate Jr. Web Developer. Love to take Dare and handle it professionally. Handle difficulties and errors efficient way.Try to keep myself updated with new technologies and learn that.</p>
             </div>
             <div class="row text-center text-uppercase my-3">
